--- a/public/css/angular-busy.css
+++ b/public/css/angular-busy.css
@@ -4,7 +4,7 @@
 	left:0px;
 	right:0px;
 	bottom:0px;
-    z-index:1001;
+    z-index:3;
 }
 
 .cg-busy-animation.ng-hide-add,
@@ -72,24 +72,26 @@
 	text-align:center;
 }
 
-.cg-busy-default-sign{
+.cg-busy-default-sign {
 	display: inline-block;
 	position:relative;
-    z-index:1002;
-	padding-bottom: 6px;
+    z-index:4;
+	/*padding-bottom: 6px;*/
+	/*padding: 10px 15px;*/
 	color:#333333;
 	text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);
-	background-color:#e9eeee;
-	border:1px solid #dddddd;
+/*	background-color:#e9eeee;
+	border:1px solid #dddddd;*/
 	border-top-width:0;
 	-webkit-border-radius:7px;
 	-moz-border-radius:7px;
 	border-radius:7px;
-	border-top-left-radius:0;
-	border-top-right-radius:0;
-	-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+	/*border-top-left-radius:0;*/
+	/*border-top-right-radius:0;*/
+/*	-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
 	-moz-box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-	box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+	box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);*/
+	margin-top: 12.5%;
 }
 .cg-busy-default-text{
 	margin:13px 12px 6px 49px;
@@ -99,12 +101,14 @@
 	max-width: 400px;
 }
 .cg-busy-default-spinner{
-	position:absolute;
-	width:25px;
-	height:25px;
+	/*position:absolute;*/
+	width:30px;
+	height:30px;
 	display:inline-block;
-	top:12px;
-	left:14px;
+	vertical-align: middle;
+	/*top:20px;*/
+	/*left:14px;*/
+	padding: 15px;
 }
 .cg-busy-default-spinner div{
 	width:12%;
