--- a/public/css/main.css
+++ b/public/css/main.css
@@ -275,7 +275,7 @@ body {
     display: block;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background: #222;
     z-index: 3;
     opacity: 0.3;
@@ -753,8 +753,51 @@ body {
 }
 
 .pillred {
-        color: #fff;
+    color: #fff;
     background-color: #c0392b;
+}
+
+.more-rows {
+    font-style: italic;
+    cursor: pointer;
+}
+
+.srp-table {
+    font-size: 0.875em;
+    margin-top: 8px;
+}
+
+.srp-table td {
+    padding: 2px;
+}
+
+.srp-click {
+    cursor: pointer;
+}
+
+
+/* ==========================================================================
+   Login classes
+   ========================================================================== */
+
+.login-container {
+    padding: 1em;
+}
+
+.login-header {
+    width: 100%;
+    height: 125px;
+    background: url(../img/login-bg.png);
+    background-repeat: no-repeat;
+}
+
+.login-header--bgimg {
+    background: url(../img/login-bg.png);
+}
+
+.login-header--greeting {
+    font-style: italic;
+    color: #fff;
 }
 
 /* ==========================================================================
@@ -788,6 +831,22 @@ body {
 
 .filter-box select {
     padding: 4px;
+}
+
+.filter-box__text-input--user {
+    background: url(../img/user144.svg);
+    background-repeat: no-repeat;
+    background-position: 1% center;
+    background-size: 16px 16px;
+    padding-left: 20px;
+}
+
+.filter-box__text-input--password {
+    background: url(../img/unlocked27.svg);
+    background-repeat: no-repeat;
+    background-position: 1% center;
+    background-size: 16px 16px;
+    padding-left: 20px;
 }
 
 .filter-box__text-input--date {
@@ -863,6 +922,11 @@ body {
 
 .result-animate-leave {
 
+}
+
+.autosuggest-error {
+    list-style: none;
+    font-weight: 600;
 }
 
 .animate-repeat {
