--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -1,3 +1,5 @@
+<div class="info-bar" ng-show="initvars.errors > 2">{{initvars.errormsg}}</div>
+
 <!-- Flexbox Grid System -->
 
 <div class="Grid">
