another ginormous commit
sorry. sorry.

--- a/public/template/login.html
+++ b/public/template/login.html
@@ -1,4 +1,4 @@
-<div class="login-header"><p class="login-header--greeting">Ready to take on the day?</p></div>
+<div class="login-header"><p class="login-header__greeting">Ready to take on the day?</p></div>
 <div class="login-container">
 	<h4>Login with your AD credentials to begin using the application.</h4>
 	<div class="filter-box__form-element">
