--- a/public/template/srp.html
+++ b/public/template/srp.html
@@ -1,7 +1,7 @@
 <div cg-busy="{promise:aspromise}">
 	<h3>Search Results</h3>
 	<p>Your search came up with {{aslength}} matches. Click on any result below to load more information.</p>
-	<input type="checkbox" /><label>Show me DOWN only.</label>
+<!-- 	<input type="checkbox" /><label>Show me DOWN only.</label> -->
 
 	<table class="srp-table">
 	    <tr class="srp-click" ng-click="search(value.vhid)" ng-repeat="(key, value) in results">
