--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,7 +139,7 @@ body {
     height: auto !important;
     height: 100%;
     margin: 0 auto -30px; /* the bottom margin is the negative value of the footer's height */
-    background: #EAEAEA;
+    background: #f7f7f7;
 }
 
 .footer, .push {
@@ -182,7 +182,8 @@ body {
     color: #fff !important; 
     font-size: 0.875em;
     clear: both;
-    box-shadow: 0px 1px 3px #222;
+    /*box-shadow: 0px 1px 2px #444;*/
+    border-bottom: 2px solid #986400;
 }
 
 .navigation--selected {
@@ -222,24 +223,38 @@ body {
     width: 58px;
     background-color: #4BB5C1;
     z-index: 5;
-    box-shadow: inset -1px 4px 5px #222;
+    /*box-shadow: inset -1px 4px 5px #222;*/
 }
 
 .side-list {
     margin: 0;
-    margin-top: 108px;
+    margin-top: 100px;
     padding: 0;
-    padding-right: 3px;
+    /*padding-right: 3px;*/
 }
 
 .side-icon {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     list-style: none;
     font-size: 10px;
     color: #fff;
     text-transform: uppercase;
     text-align: center;
-    padding-bottom: 24px;
+    margin-bottom: 24px;
+    padding: 2px;
     cursor: pointer;
+}
+
+/*.side-icon:hover {
+    background: rgba(255,255,255,0.4);
+    border-right: 3px solid #fff;
+}
+*/
+
+.side-push {
+    margin-left: 428px !important;
 }
 
 .escalation {
@@ -275,10 +290,6 @@ body {
 
 .cardui.ng-leave.ng-leave-active {
   opacity: 0;
-}
-
-.push {
-    margin-left: 440px;
 }
 
 .card {
@@ -728,17 +739,22 @@ body {
     height: 125px;
     background: url(../img/login-bg.png);
     background-repeat: no-repeat;
+    padding-top: 93px;
 }
 
 .login-header--bgimg {
     background: url(../img/login-bg.png);
 }
 
-.login-header--greeting {
+.login-header__greeting {
     font-style: italic;
     color: #fff;
     /*padding: 0;*/
     margin: 0;
+    background-color: rgba(0,0,0,0.66);
+    font-size: 1.25em;
+    padding: 6px;
+    text-shadow: 1px 1px rgba(0,0,0,0.6);
 }
 
 /* ==========================================================================
@@ -806,20 +822,28 @@ body {
    Side Panel classes
    ========================================================================== */
 
+#searchPane {
+    width: 360px;
+    left: -360px;
+}
+
+#alarmPane {
+    width: 560px;
+    left: -560px;
+}
+
 .panel-container {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     background-color: #fff;
     position: fixed;
-    left: -360px;
     top: 0;
     z-index: 4;
     height: 100%;
     padding-top: 115px;
     padding-left: 8px;
     padding-right: 6px;
-    width: 360px;
     /*display: none;*/
     transition: 1s;
     box-shadow: 0px 1px 3px #222;
@@ -829,7 +853,7 @@ body {
 .panel-open {
     display: block;
     transition: 1s;
-    left: 58px;
+    left: 58px !important;
 }
 
 .search-container {
@@ -1419,14 +1443,22 @@ body {
 
 .overlay {
     display: block;
+    visibility: hidden;
     width: 100%;
     height: 100%;
     position: fixed;
     background: #222;
     z-index: 3;
+    opacity: 0;
+    transition: opacity 0.5s, visibility 0s 0.5s;
+}
+
+.overlay--on {
     opacity: 0.3;
-    transition: opacity 0.5s linear;
-}   
+    visibility: visible;
+    transition: opacity 0.5s;
+    /*display: block;*/
+}
 
 .small-text {
     font-size: 0.875em;
