--- a/public/css/ngDialog-theme-login.css
+++ b/public/css/ngDialog-theme-login.css
@@ -82,7 +82,8 @@
   /*padding: 1em;*/
   position: relative;
   width: 500px;
-  height: 100%;
+  height: 220px;
+  /*height: 100%;*/
   overflow-y: auto;
   box-shadow: 2px 2px #444;
 }
