--- a/public/css/ngDialog-theme-error.css
+++ b/public/css/ngDialog-theme-error.css
@@ -58,37 +58,36 @@
   }
 }
 
-.ngdialog.ngdialog-theme-login {
-  /*padding-bottom: 19%;*/
-  padding-top: 18%;
+.ngdialog.ngdialog-theme-error {
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 
-.ngdialog.ngdialog-theme-login.ngdialog-closing .ngdialog-content {
+.ngdialog.ngdialog-theme-error.ngdialog-closing .ngdialog-content {
   -webkit-animation: ngdialog-flyout .5s;
   animation: ngdialog-flyout .5s;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-content {
+.ngdialog.ngdialog-theme-error .ngdialog-content {
   -webkit-animation: ngdialog-flyin .5s;
   animation: ngdialog-flyin .5s;
   background: #fff;
-  /*border-radius: 2px;*/
+  border-radius: 2px;
   color: #444;
   font-family: 'Lato', sans-serif;
   font-size: 1em;
   line-height: 1.25em;
   margin: 0 auto;
   max-width: 100%;
-  /*padding: 1em;*/
+  padding: 1em;
   position: relative;
-  width: 500px;
-  height: 240px;
+  width: 55%;
   /*height: 100%;*/
-  overflow: none;
-  box-shadow: 2px 2px #444;
+  height: 200px;
+  overflow-y: scroll;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-close {
+.ngdialog.ngdialog-theme-error .ngdialog-close {
   border-radius: 5px;
   cursor: pointer;
   position: absolute;
@@ -96,7 +95,7 @@
   top: 0;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-close:before {
+.ngdialog.ngdialog-theme-error .ngdialog-close:before {
   background: transparent;
   border-radius: 3px;
   color: #bbb;
@@ -112,24 +111,24 @@
   width: 30px;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-close:hover:before,
-.ngdialog.ngdialog-theme-login .ngdialog-close:active:before {
+.ngdialog.ngdialog-theme-error .ngdialog-close:hover:before,
+.ngdialog.ngdialog-theme-error .ngdialog-close:active:before {
   color: #777;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-message {
+.ngdialog.ngdialog-theme-error .ngdialog-message {
   margin-bottom: .5em;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-input {
+.ngdialog.ngdialog-theme-error .ngdialog-input {
   margin-bottom: 1em;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-input textarea,
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="text"],
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="password"],
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="email"],
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="url"] {
+.ngdialog.ngdialog-theme-error .ngdialog-input textarea,
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="text"],
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="password"],
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="email"],
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="url"] {
   background: #fff;
   border: 0;
   border-radius: 3px;
@@ -142,27 +141,27 @@
   width: 100%;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-input textarea:focus,
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="text"]:focus,
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="password"]:focus,
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="email"]:focus,
-.ngdialog.ngdialog-theme-login .ngdialog-input input[type="url"]:focus {
+.ngdialog.ngdialog-theme-error .ngdialog-input textarea:focus,
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="text"]:focus,
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="password"]:focus,
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="email"]:focus,
+.ngdialog.ngdialog-theme-error .ngdialog-input input[type="url"]:focus {
   -webkit-box-shadow: inset 0 0 0 2px #8dbdf1;
   box-shadow: inset 0 0 0 2px #8dbdf1;
   outline: none;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-buttons {
+.ngdialog.ngdialog-theme-error .ngdialog-buttons {
   *zoom: 1;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-buttons:after {
+.ngdialog.ngdialog-theme-error .ngdialog-buttons:after {
   content: '';
   display: table;
   clear: both;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-button {
+.ngdialog.ngdialog-theme-error .ngdialog-button {
   border: 0;
   border-radius: 3px;
   cursor: pointer;
@@ -176,25 +175,25 @@
   text-transform: uppercase;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-button:focus {
+.ngdialog.ngdialog-theme-error .ngdialog-button:focus {
   -webkit-animation: ngdialog-pulse 1.1s infinite;
   animation: ngdialog-pulse 1.1s infinite;
   outline: none;
 }
 
 @media (max-width: 568px) {
-  .ngdialog.ngdialog-theme-login .ngdialog-button:focus {
+  .ngdialog.ngdialog-theme-error .ngdialog-button:focus {
     -webkit-animation: none;
     animation: none;
   }
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-button.ngdialog-button-primary {
+.ngdialog.ngdialog-theme-error .ngdialog-button.ngdialog-button-primary {
   background: #3288e6;
   color: #fff;
 }
 
-.ngdialog.ngdialog-theme-login .ngdialog-button.ngdialog-button-secondary {
+.ngdialog.ngdialog-theme-error .ngdialog-button.ngdialog-button-secondary {
   background: #e0e0e0;
   color: #777;
 }
