--- a/public/template/login.html
+++ b/public/template/login.html
@@ -12,4 +12,5 @@
 	    </div>
 	</div>
 	<button ng-click="login()" class="btn-red">Submit</button>
+	<div class="login-container__error">{{login.error}}</div>
 </div>
