--- a/public/template/webconsole.html
+++ b/public/template/webconsole.html
@@ -1,6 +1,4 @@
 <!-- Flexbox Grid System -->
-
-
 <div class="Grid">
     <div class="Grid-cell">
         <div class="Grid Grid--gutters Grid--flexCells u-nested-full">
@@ -127,9 +125,21 @@
                                 <th width="10%"><span class="sortable" ng-click="sortType = 'netmask';sortReverse = !sortReverse">Netmask</span><span ng-show="sortType == 'netmask' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'netmask' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
                             </tr>
                             <tr ng-repeat="devices in interfacedevices | orderBy:sortType:sortReverse | limitTo: 15" ng-class-even="'even'">
-                                <td><span class="mini-pill" ng-class="{pillgreen: devices.ifstatus == 'OK', pillred: devices.ifstatus == 'DOWN', pillred: devices.ifstatus == 'CRITICAL'}">{{devices.ifstatus}}</td>
-                                <td><span class="mini-pill" ng-class="{pillgreen: devices.ifadminstatus == 'OK', pillred: devices.ifadminstatus == 'DOWN', pillred: devices.ifadminstatus == 'CRITICAL'}">{{devices.ifadminstatus}}</td>
-                                <td><span class="mini-pill" ng-class="{pillgreen: devices.ifopr == 'OK', pillred: devices.ifopr == 'DOWN', pillred: devices.ifopr == 'CRITICAL'}">{{devices.ifopr}}</td>
+                                <td>
+                                    <span class="mini-pill" ng-if="devices.ifstatus == 'OK' || devices.ifstatus =='DOWN' || devices.ifstatus == 'CRITICAL' || devices.ifstatus == 'MANAGED'" ng-class="{pillgreen: devices.ifstatus == 'OK', pillred: devices.ifstatus == 'DOWN', pillred: devices.ifstatus == 'CRITICAL'}">{{devices.ifstatus}}</span>
+                                    <span ng-if="devices.ifstatus == 'UNMANAGED' || devices.ifstatus =='UNKNOWN'" class="mini-pill pill-gray">-</td>
+
+                                <td>
+                                    <span class="mini-pill" ng-if="devices.ifadminstatus == 'OK' || devices.ifadminstatus =='DOWN' || devices.ifadminstatus == 'CRITICAL'" ng-class="{pillgreen: devices.ifadminstatus == 'OK', pillred: devices.ifadminstatus == 'DOWN', pillred: devices.ifadminstatus == 'CRITICAL'}">{{devices.ifadminstatus}}</span>
+                                    <span ng-if="devices.ifadminstatus == 'UNMANAGED'" class="mini-pill pill-gray">-</span>
+                                    <span ng-if="devices.ifadminstatus =='UNKNOWN'" class="mini-pill pill-gray"><img src="img/question11.svg"></span>
+                                </td>
+
+                                <td>
+                                    <span class="mini-pill" ng-if="devices.ifopr == 'OK' || devices.ifopr =='DOWN' || devices.ifopr == 'CRITICAL'" ng-class="{pillgreen: devices.ifopr == 'OK', pillred: devices.ifopr == 'DOWN', pillred: devices.ifopr == 'CRITICAL'}">{{devices.ifopr}}</span>
+                                    <span ng-if="devices.ifopr == 'UNMANAGED'" class="mini-pill pill-gray">-</span>
+                                    <span ng-if="devices.ifadminstatus =='UNKNOWN'" class="mini-pill pill-gray"><img src="img/question11.svg"></span>
+                                </td>
                                 <td>{{devices.ifindex}}</td>
                                 <td>{{devices.ifname}}</td>
                                 <td>{{devices.ifalias}}</td>
@@ -180,39 +190,43 @@
 
 <script type="text/ng-template" id="devicesExpand">
     <h4>Interface Status Information</h4>
-    <table class="circuit-table">
+    <table class="circuit-table fixed-headers">
+        <thead>
         <tr class="belieze-hole">
-            <th><span class="sortable" ng-click="sortType = 'ifstatus';sortReverse = !sortReverse">Status<br/>Info</span><span ng-show="sortType == 'ifstatus' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifstatus' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="8%"><span class="sortable" ng-click="sortType = 'ifstatus';sortReverse = !sortReverse">Status<br/>Info</span><span ng-show="sortType == 'ifstatus' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifstatus' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'ifadminstatus';sortReverse = !sortReverse">IF Admin<br/>Status</span><span ng-show="sortType == 'ifadminstatus' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifadminstatus' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="8%"><span class="sortable" ng-click="sortType = 'ifadminstatus';sortReverse = !sortReverse">IF Admin<br/>Status</span><span ng-show="sortType == 'ifadminstatus' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifadminstatus' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'ifopr';sortReverse = !sortReverse">If Oper<br/>Status</span><span ng-show="sortType == 'ifopr' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifopr' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th  width="8%"><span class="sortable" ng-click="sortType = 'ifopr';sortReverse = !sortReverse">If Oper<br/>Status</span><span ng-show="sortType == 'ifopr' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifopr' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'ifindex';sortReverse = !sortReverse">IF Index</span><span ng-show="sortType == 'ifindex' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifindex' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="4%"><span class="sortable" ng-click="sortType = 'ifindex';sortReverse = !sortReverse">IF Index</span><span ng-show="sortType == 'ifindex' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifindex' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'ifname';sortReverse = !sortReverse">IF Name</span><span ng-show="sortType == 'ifname' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifname' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="10%"><span class="sortable" ng-click="sortType = 'ifname';sortReverse = !sortReverse">IF Name</span><span ng-show="sortType == 'ifname' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifname' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'ifalias';sortReverse = !sortReverse">IF Alias</span><span ng-show="sortType == 'ifalias' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifalias' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="20%"><span class="sortable" ng-click="sortType = 'ifalias';sortReverse = !sortReverse">IF Alias</span><span ng-show="sortType == 'ifalias' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifalias' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'ifdesc';sortReverse = !sortReverse">IF Desc</span><span ng-show="sortType == 'ifdesc' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifdesc' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="11%"><span class="sortable" ng-click="sortType = 'ifdesc';sortReverse = !sortReverse">IF Desc</span><span ng-show="sortType == 'ifdesc' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ifdesc' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'iftype';sortReverse = !sortReverse">IF Type</span><span ng-show="sortType == 'iftype' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'iftype' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="11%"><span class="sortable" ng-click="sortType = 'iftype';sortReverse = !sortReverse">IF Type</span><span ng-show="sortType == 'iftype' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'iftype' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'ipaddress';sortReverse = !sortReverse">IP Address</span><span ng-show="sortType == 'ipaddress' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ipaddress' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="10%"><span class="sortable" ng-click="sortType = 'ipaddress';sortReverse = !sortReverse">IP Address</span><span ng-show="sortType == 'ipaddress' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'ipaddress' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
 
-            <th><span class="sortable" ng-click="sortType = 'netmask';sortReverse = !sortReverse">Netmask</span><span ng-show="sortType == 'netmask' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'netmask' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
+            <th width="10%"><span class="sortable" ng-click="sortType = 'netmask';sortReverse = !sortReverse">Netmask</span><span ng-show="sortType == 'netmask' && !sortReverse" class="sort-icon"><img src="img/sortdown.svg"/></span><span ng-show="sortType == 'netmask' && sortReverse" class="sort-icon"><img src="img/sortup.svg"/></span></th>
         </tr>
-        <tr ng-repeat="devices in interfacedevices | orderBy:sortType:sortReverse" ng-class-even="'even'">
-            <td><span class="mini-pill" ng-class="{pillgreen: devices.ifstatus == 'OK', pillred: devices.ifstatus == 'DOWN', pillred: devices.ifstatus == 'CRITICAL'}">{{devices.ifstatus}}</td>
-            <td><span class="mini-pill" ng-class="{pillgreen: devices.ifadminstatus == 'OK', pillred: devices.ifadminstatus == 'DOWN', pillred: devices.ifadminstatus == 'CRITICAL'}">{{devices.ifadminstatus}}</td>
-            <td><span class="mini-pill" ng-class="{pillgreen: devices.ifopr == 'OK', pillred: devices.ifopr == 'DOWN', pillred: devices.ifopr == 'CRITICAL'}">{{devices.ifopr}}</td>
-            <td>{{devices.ifindex}}</td>
-            <td>{{devices.ifname}}</td>
-            <td>{{devices.ifalias}}</td>
-            <td>{{devices.ifdesc}}</td>
-            <td>{{devices.iftype}}</td>
-            <td>{{devices.ipaddress}}</td>
-            <td>{{devices.netmask}}</td>
-        </tr>
-    </table>
+        </thead>
+        <tbody>
+            <tr ng-repeat="devices in interfacedevices | orderBy:sortType:sortReverse" ng-class-even="'even'">
+                <td width="8%"><span class="mini-pill" ng-class="{pillgreen: devices.ifstatus == 'OK', pillred: devices.ifstatus == 'DOWN', pillred: devices.ifstatus == 'CRITICAL'}">{{devices.ifstatus}}</td>
+                <td width="8%"><span class="mini-pill" ng-class="{pillgreen: devices.ifadminstatus == 'OK', pillred: devices.ifadminstatus == 'DOWN', pillred: devices.ifadminstatus == 'CRITICAL'}">{{devices.ifadminstatus}}</td>
+                <td width="8%"><span class="mini-pill" ng-class="{pillgreen: devices.ifopr == 'OK', pillred: devices.ifopr == 'DOWN', pillred: devices.ifopr == 'CRITICAL'}">{{devices.ifopr}}</td>
+                <td width="4%">{{devices.ifindex}}</td>
+                <td width="10%">{{devices.ifname}}</td>
+                <td width="20%">{{devices.ifalias}}</td>
+                <td width="11%">{{devices.ifdesc}}</td>
+                <td width="11%">{{devices.iftype}}</td>
+                <td width="10%">{{devices.ipaddress}}</td>
+                <td width="10%">{{devices.netmask}}</td>
+            </tr>
+        </tbody>
+        </table>
 </script>
