--- a/public/css/ngDialog-theme-webconsole.css
+++ b/public/css/ngDialog-theme-webconsole.css
@@ -83,7 +83,7 @@
   position: relative;
   width: 90%;
   height: 100%;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 .ngdialog.ngdialog-theme-webconsole .ngdialog-close {
